# Projeto-4-Bimestre

./: .env.example  .gitignore  Mini-spec_Login.md  README.md  docker-compose.yml  equipe(1).md  implementation_plan.md  render.yaml  session_handover.md
.github/workflows/: ci.yml
backend/: .dockerignore  README.md  pyproject.toml
backend/app/: auth_utils.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  auth.py  calendar.py  chat.py  notifications.py  projects.py  reports.py  submissions.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 06e9b6526f8c_create_auth_tables.py  37ae32bd0f4b_create_submissions_table.py  3a1b2c3d4e5f_create_academic_events.py  4f5e6d7c8b9a_create_messages.py  98b8db8cb9ac_create_projects_tasks_audit.py  b6281ee61401_create_submissions.py
backend/tests/: conftest.py  test_auth.py  test_projects_tasks.py  test_submissions.py
docker/: backend.Dockerfile
docs/: Mini-spec_Login.md  aws_deployment_guide.md  documento_de_visao.md  equipe.md  implementation_plan.md  render_deployment_guide.md  session_handover.md
frontend/: frontend.Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: global.css  variables.css
frontend/src/components/: AppHeader.vue  ChatWidget.vue  DashboardCharts.vue  SidebarNav.vue  SkeletonCard.vue  ToastNotification.vue
frontend/src/layouts/: AdminLayout.vue  MainLayout.vue
frontend/src/router/: index.js
frontend/src/store/: auth.js  notifications.js
(+18 files in other folders)
