[project]
name = "ifal-projetos-backend"
version = "0.1.0"
description = "Backend em FastAPI para o sistema IFAL Projetos"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.28",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic[email]>=2.6.4",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
    "fpdf2>=2.7.0",
    "markdown>=3.5.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.setuptools]
packages = ["app"]

